RESOLVED FIXED228556
[iOS] <select> picker value committed to incorrect element after programmatic focus change
https://bugs.webkit.org/show_bug.cgi?id=228556
Summary [iOS] <select> picker value committed to incorrect element after programmatic...
Aditya Keerthi
Reported 2021-07-28 10:21:51 PDT
...
Attachments
Patch (23.63 KB, patch)
2021-07-28 10:25 PDT, Aditya Keerthi
no flags
Aditya Keerthi
Comment 1 2021-07-28 10:22:03 PDT
Aditya Keerthi
Comment 2 2021-07-28 10:25:33 PDT
Aditya Keerthi
Comment 3 2021-07-28 13:11:28 PDT
Thanks for the review!
EWS
Comment 4 2021-07-28 13:21:38 PDT
Committed r280398 (240039@main): <https://commits.webkit.org/240039@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 434431 [details].
Note You need to log in before you can comment on or make changes to this bug.